added order info by email

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <div id="sanaexpert-chat-widget">
     <!-- Circle Icon -->
     <div id="sanaexpert-circle-icon" class="circle-icon">
-        Hola ¿En qué puedo ayudarte?
+        ¡Hey! ¿Qué necesitas? 😄
     </div>
 
     <!-- Chat Button -->
